--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@
         <!-- Контактная информация -->
         <ul class="nav-contacts list">
           <li class="contacts-items">
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="link" href="mailto:info@devstudio.com">
+              <svg class="contacts-icon" width="16" height="16">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg><span>info@devstudio.com</span></a
             >
           </li>
           <li class="contacts-items">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">
+              <svg class="contacts-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg><span>+38 096 111 11 11</span></a
+            >
           </li>
         </ul>
       </div>
@@ -59,9 +65,12 @@
       <!-- Достоинства -->
       <section class="dignity-container section container">
         <h2 class="hide">Переваги</h2>
-        <!-- потом скроется -->
+
         <ul class="dignity list">
           <li class="dignity-items">
+            <svg class="dignity-icons" width="270" height="120">
+              <use href="./images/symbol-defs.svg#icon-antenna"></use>
+            </svg>
             <h3 class="dignity-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="dignity-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
@@ -69,6 +78,9 @@
             </p>
           </li>
           <li class="dignity-items">
+            <svg class="dignity-icons" width="270" height="120">
+              <use href="./images/symbol-defs.svg#icon-clock"></use>
+            </svg>
             <h3 class="dignity-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="dignity-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
@@ -76,12 +88,18 @@
             </p>
           </li>
           <li class="dignity-items">
+            <svg class="dignity-icons" width="270" height="120">
+              <use href="./images/symbol-defs.svg#icon-diagram"></use>
+            </svg>
             <h3 class="dignity-title">ПЛАНУВАННЯ</h3>
             <p class="dignity-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li class="dignity-items">
+            <svg class="dignity-icons" width="270" height="120">
+              <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+            </svg>
             <h3 class="dignity-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="dignity-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
@@ -136,6 +154,63 @@
               <div class="team-about">
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p class="team-profession" lang="en">Product Designer</p>
+
+                <ul class="team-social list">
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use href="./images/symbol-defs.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-items">
@@ -148,6 +223,63 @@
               <div class="team-about">
                 <h3 class="team-name">Ольга Рєпіна</h3>
                 <p class="team-profession" lang="en">Frontend Developer</p>
+
+                <ul class="team-social list">
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use href="./images/symbol-defs.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-items">
@@ -160,6 +292,62 @@
               <div class="team-about">
                 <h3 class="team-name">Микола Тарасов</h3>
                 <p class="team-profession" lang="en">Marketing</p>
+                <ul class="team-social list">
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use href="./images/symbol-defs.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-items">
@@ -172,45 +360,236 @@
               <div class="team-about">
                 <h3 class="team-name">Михайло Єрмаков</h3>
                 <p class="team-profession" lang="en">UI Designer</p>
+                <ul class="team-social list">
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use href="./images/symbol-defs.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-items">
+                    <a
+                      href=""
+                      class="team-link link-social link"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
+                      <svg class="social-icon team-icon" width="44" height="44">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <!-- Постоянные клиенты -->
+      <section class="clients section container">
+        <h2 class="clients-title title">Постійні клієнти</h2>
+
+        <ul class="clients-list list">
+          <li class="client-items">
+            <a
+              href=""
+              class="clients-link link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <svg class="clients-icon" width="170" height="92">
+                <use href="./images/symbol-defs.svg#icon-yoco"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="client-items">
+            <a
+              href=""
+              class="clients-link link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <svg class="clients-icon" width="170" height="92">
+                <use href="./images/symbol-defs.svg#icon-tagline"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="client-items">
+            <a
+              href=""
+              class="clients-link link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <svg class="clients-icon" width="170" height="92">
+                <use href="./images/symbol-defs.svg#icon-company"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="client-items">
+            <a
+              href=""
+              class="clients-link link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <svg class="clients-icon" width="170" height="92">
+                <use href="./images/symbol-defs.svg#icon-forestpeter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="client-items">
+            <a
+              href=""
+              class="clients-link link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <svg class="clients-icon" width="170" height="92">
+                <use href="./images/symbol-defs.svg#icon-brand"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="client-items">
+            <a
+              href=""
+              class="clients-link link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <svg class="clients-icon" width="170" height="92">
+                <use href="./images/symbol-defs.svg#icon-tag"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer class="footer">
       <div class="footer-container container">
-        <!-- logo -->
-        <a class="logo link" href="./index.html" lang="en"
-          ><span>Web</span>Studio</a
-        >
-        <!-- Как найти -->
-        <address class="footer-address address">
-          <ul class="address-list list">
-            <li class="address-items">
+        <div class="footer-items">
+          <!-- logo -->
+          <a class="logo link" href="./index.html" lang="en">
+            <span>Web</span>Studio</a
+          >
+          <!-- Как найти -->
+          <address class="footer-address address">
+            <ul class="address-list list">
+              <li class="address-items">
+                <a
+                  class="link"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  href="https://goo.gl/maps/oZcnaYU12z9c5pJu7"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+
+              <li class="address-items">
+                <a class="address-contact link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+
+              <li class="address-items">
+                <a class="address-contact link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-items">
+          <h2 class="footer-title">приєднуйтесь</h2>
+
+          <ul class="social-list list">
+            <li class="social-items">
               <a
-                class="link"
+                href=""
+                class="footer-soclink link-social link"
                 target="_blank"
                 rel="noreferrer noopener"
-                href="https://goo.gl/maps/oZcnaYU12z9c5pJu7"
-                >м. Київ, пр-т Лесі Українки, 26</a
               >
+                <svg class="footer-socicon social-icon" width="44" height="44">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-
-            <li class="address-items">
-              <a class="address-contact link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+            <li class="social-items">
+              <a
+                href=""
+                class="footer-soclink link-social link"
+                target="_blank"
+                rel="noreferrer noopener"
               >
+                <svg class="footer-socicon social-icon" width="44" height="44">
+                  <use href="./images/symbol-defs.svg#icon-Twitter"></use>
+                </svg>
+              </a>
             </li>
-
-            <li class="address-items">
-              <a class="address-contact link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
+            <li class="social-items">
+              <a
+                href=""
+                class="footer-soclink link-social link"
+                target="_blank"
+                rel="noreferrer noopener"
               >
+                <svg class="footer-socicon social-icon" width="44" height="44">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-items">
+              <a
+                href=""
+                class="footer-soclink link-social link"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
+                <svg class="footer-socicon social-icon" width="44" height="44">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
