--- a/portfolio.html
+++ b/portfolio.html
@@ -36,12 +36,17 @@
         <!-- Контактная информация -->
         <ul class="nav-contacts list">
           <li class="contacts-items">
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="link" href="mailto:info@devstudio.com">
+              <svg class="contacts-icon" width="16" height="16">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg><span>info@devstudio.com</span></a
             >
           </li>
           <li class="contacts-items">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">
+              <svg class="contacts-icon" width="10" height="16">
+              <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            </svg><span>+38 096 111 11 11</span></a>
           </li>
         </ul>
       </div>
@@ -215,36 +220,76 @@
 
     <footer class="footer">
       <div class="footer-container container">
-        <!-- logo -->
-        <a class="logo link" href="./index.html" lang="en"
-          ><span>Web</span>Studio</a
-        >
-        <!-- Как найти -->
-        <address class="footer-address address">
-          <ul class="address-list list">
-            <li class="address-items">
-              <a
-                class="link"
-                target="_blank"
-                rel="noreferrer noopener"
-                href="https://goo.gl/maps/oZcnaYU12z9c5pJu7"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
+        <div class="footer-items">
+          <!-- logo -->
+          <a class="logo link" href="./index.html" lang="en">
+            <span>Web</span>Studio</a>
+          <!-- Как найти -->
+          <address class="footer-address address">
+            <ul class="address-list list">
+              <li class="address-items">
+                <a
+                  class="link"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  href="https://goo.gl/maps/oZcnaYU12z9c5pJu7"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
 
-            <li class="address-items">
-              <a class="address-contact link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
+              <li class="address-items">
+                <a class="address-contact link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
 
-            <li class="address-items">
-              <a class="address-contact link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+              <li class="address-items">
+                <a class="address-contact link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-items">
+          <h2 class="footer-title">приєднуйтесь</h2>
+
+          <ul class="social-list list">
+
+            <li class="social-items">
+              <a href="" class="footer-soclink link-social link" target="_blank"
+              rel="noreferrer noopener">
+                <svg class="footer-socicon social-icon" width="44" height="44">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-items">
+              <a href="" class="footer-soclink link-social link" target="_blank"
+              rel="noreferrer noopener">
+                <svg class="footer-socicon social-icon" width="44" height="44">
+                  <use href="./images/symbol-defs.svg#icon-Twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-items">
+              <a href="" class="footer-soclink link-social link" target="_blank"
+              rel="noreferrer noopener">
+                <svg class="footer-socicon social-icon" width="44" height="44">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-items">
+              <a href="" class="footer-soclink link-social link" target="_blank"
+              rel="noreferrer noopener">
+                <svg class="footer-socicon social-icon" width="44" height="44">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
