исправляет тень в портфолио items

--- a/portfolio.html
+++ b/portfolio.html
@@ -171,7 +171,7 @@
           </li>
 
           <li class="portfolio-items">
-            <a class="link" href="">
+            <a class="portfolio-element link" href="">
               <img
                 src="./images/limit-edition.jpg"
                 alt="книга"
